added an update of player and computer card and lose or win situations

--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,11 @@ body {
 }
 
 .computer-deck {
-  background-color: green;
+  background-color: rgb(211, 208, 53);
 }
 
 .player-deck {
-  background-color: blue;
+  background-color: rgb(42, 94, 206);
 }
 
 .text {
