--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,42 @@
-*, *::after, *::before { 
+/* *, *::after, *::before { 
   box-sizing: border-box;
+} */
+body{
+    height: 100vh;
+    text-align: center;
+    /* background: rgb(248, 239, 213); */
+    background-image: url(/images/img2.jpeg);
+    background-size: cover;
+   
+}
+header {
+    /* margin: 10px 12 20px 15; */
+    color: rgb(7, 7, 7);
+    /* font-size: 1.2rem; */
+    height: 90px;
+    align-items: center;
+    justify-content: space-around;
+    background-color: rgba(240, 154, 97, 0.781);
+}
+header ul{
+    list-style: none;
+    display: flex;
+}
+header ul li{
+    width: 150px;
+    height:60px;
+    line-height: 60px;
 }
 
-body {
-  margin: 0;
+.tiles {
+  margin: 5;
   display: grid;
-  grid-template-columns: repeat(2, 4rem);
-  grid-template-rows: 7rem 2rem 7rem;
-  gap: .5rem;
+  grid-template-columns: repeat(2, 14rem);
+  grid-template-rows: 20rem 4rem 20rem;
+  gap: 1.5rem;
   cursor: pointer;
   justify-content: center;
-  padding-top: 1rem;
+  padding-top: 5rem;
 }
 
 .deck {
@@ -21,8 +47,9 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  border-radius: .5rem;
-  color: white;
+  border-radius: 1.5rem;
+  color: black;
+  background-image:url(/images/card5.jpeg);
   user-select: none;
 }
 
