--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 }
 header {
     /* margin: 10px 12 20px 15; */
-    color: rgb(7, 7, 7);
+    color: rgb(248, 6, 6);
     /* font-size: 1.2rem; */
     height: 90px;
     align-items: center;
@@ -26,6 +26,8 @@ header ul li{
     width: 150px;
     height:60px;
     line-height: 60px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .tiles {
@@ -42,23 +44,25 @@ header ul li{
 .deck {
   height: 100%;
   width: 100%;
-  border: 1px solid black;
+  border: 2px solid rgb(221, 46, 46);
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
   border-radius: 1.5rem;
   color: black;
-  background-image:url(/images/card5.jpeg);
+  /* background-image:url(/images/card5.jpeg); */
   user-select: none;
 }
 
 .computer-deck {
   background-color: rgb(211, 208, 53);
+  background-image:url(/images/card1.jpeg);
 }
 
 .player-deck {
   background-color: rgb(42, 94, 206);
+  background-image:url(/images/card2.jpeg);
 }
 
 .text {
