--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
     height: 90px;
     align-items: center;
     justify-content: space-around;
-    background-color: rgba(240, 154, 97, 0.781);
+    background-image:url(/images/head1.jpeg);
 }
 header ul{
     list-style: none;
@@ -44,7 +44,7 @@ header ul li{
 .deck {
   height: 100%;
   width: 100%;
-  border: 2px solid rgb(221, 46, 46);
+  border: 2px solid rgb(119, 6, 6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,12 +57,12 @@ header ul li{
 
 .computer-deck {
   background-color: rgb(211, 208, 53);
-  background-image:url(/images/card1.jpeg);
+  background-image:url(/images/card4.jpeg);
 }
 
 .player-deck {
   background-color: rgb(42, 94, 206);
-  background-image:url(/images/card2.jpeg);
+  background-image:url(/images/card3.jpeg);
 }
 
 .text {
@@ -70,18 +70,20 @@ header ul li{
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
 }
 
 .card {
   position: relative;
   height: 100%;
   width: 100%;
-  border: 1px solid black;
-  border-radius: .5rem;
+  border: 2px solid rgb(119, 6, 6);
+  border-radius: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4rem;
+  background-image:url(/images/card2.jpeg)
 }
 
 .card.red {
