--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,26 @@
   box-sizing: border-box;
 } */
 body{
-    height: 100vh;
+    height: 100%;
     text-align: center;
-    /* background: rgb(248, 239, 213); */
-    background-image: url(/images/img2.jpeg);
     background-size: cover;
    
+   
 }
+/* html{
+  border-radius: 2rem;
+  border: 2px solid rgb(119, 6, 6);
+
+} */
 header {
     /* margin: 10px 12 20px 15; */
-    color: rgb(12, 12, 12);
-    /* font-size: 1.2rem; */
-    height: 90px;
+    color: rgb(250, 4, 4);
+    font-size: 1.7rem;
+    height: 50px;
     font-size: large;
     align-items: center;
     justify-content: space-around;
-    background-image:url(/images/head1.jpeg);
+    /* background-image:url(/images/head1.jpeg); */
 }
 header ul{
     list-style: none;
@@ -71,7 +75,7 @@ header ul li{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .card {
@@ -113,8 +117,23 @@ header ul li{
   transform: rotate(180deg);
 }
 
-#mainbtn:active {
-  background: #345;
-  border: none;
-  color: white;
+button{
+  background-color: white;
+  width: 170px;
+  margin:0 20px;
+  display:inline-block;
+  line-height: 60px;
+  border-radius: 5rem;
+  border: 2px solid rgb(119, 6, 6);
+}
+.row{
+text-align:center;
+margin-left:-20px;
+margin-right:-20px;
+}
+#next:hover{
+  background-color: rgb(160, 225, 241);
+}
+#reset:hover{
+  background-color: rgb(245, 81, 81);
 }
