--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ display:flex;
 font-size: 30px;
 font-family: 'Courier New', Courier, monospace;
 margin-inline-start: 50px;
-
-
+}
+img{
+  border-radius: 50%;
 }
