changed body background

--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,19 @@ body{
     height: 100%;
     text-align: center;
     background-size: cover;
+    background-image: url(/images/header6.jpeg);
 
 }
 
 header {
     /* margin: 10px 12 20px 15; */
     color: rgb(250, 4, 4);
-    font-size: 1.7rem;
-    height: 50px;
+    font-size: 4rem;
+    height: 70px;
     font-size: large;
     align-items: center;
     justify-content: space-around;
-    /* background-image:url(/images/head1.jpeg); */
+    background-image:url(/images/head1.jpeg);
 }
 header ul{
     list-style: none;
@@ -41,7 +42,6 @@ header ul li{
   grid-template-columns: repeat(2, 14rem);
   grid-template-rows: 20rem 4rem 20rem;
   gap: 1.5rem;
-  /* cursor: pointer; */
   justify-content: center;
   padding-top: 5rem;
 }
@@ -56,7 +56,6 @@ header ul li{
   font-size: 3rem;
   border-radius: 1.5rem;
   color: (250, 4, 4);
-  /* background-image:url(/images/card5.jpeg); */
   user-select: none;
 }
 
